--- a/EduHome/Views/Home/Index.cshtml
+++ b/EduHome/Views/Home/Index.cshtml
@@ -2,10 +2,10 @@
 @{
     ViewData["Title"] = "Index";
 }
-
 <!-- Background Area Start -->
-<section id="slider-container" class="slider-area two">
+<section id="slider-container" class="slider-area three">
     <div class="slider-owl owl-theme owl-carousel">
+        <!-- Start Slingle Slide -->
         @foreach (Slider item in Model.Sliders)
         {
             <!-- Start Slingle Slide -->
@@ -31,22 +31,24 @@
             <!-- End Slingle Slide -->
 
         }
+
+        <!-- End Slingle Slide -->
+
     </div>
 </section>
 <!-- Background Area End -->
 <!-- Courses Area Start -->
-<div class="courses-area two pt-150 pb-150 text-center">
+<div class="courses-area pt-150 text-center">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="section-title">
-                    <img src="~/img/icon/section1.png" alt="section-title">
+                    <img src="img/icon/section.png" alt="section-title">
                     <h2>COURSES WE OFFER</h2>
                 </div>
             </div>
         </div>
         <div class="row">
-
             @foreach (Course course in Model.Courses.Take(3))
             {
 
@@ -70,8 +72,6 @@
 
             }
 
-
-
         </div>
     </div>
 </div>
@@ -87,7 +87,6 @@
                         <div class="video-icon video-hover">
                             <a class="video-popup" href="@foreach (NoticeBoard notice1 in Model.NoticeBoards.Take(1))
                             {
-                          
                                 @notice1.VideoLink
 	                         }">
                                 <i class="zmdi zmdi-play"></i>
@@ -103,7 +102,7 @@
                         @foreach (NoticeBoard notice in Model.NoticeBoards)
                         {
                             <div class="single-notice-left mb-23 pb-20">
-                                <h4>@notice.Date</h4>
+                                <h4>@notice.Date.ToString("dd, MMMM yyyy")</h4>
                                 <p>@notice.Text</p>
                             </div>
 
@@ -122,15 +121,14 @@
         <div class="row">
             <div class="col-md-6 col-sm-6">
                 <div class="about-content">
-                    <h2>@Html.Raw(Model.AboutEduHomes)</h2>
-                    <p>I must explain to you how all this mistaken idea of denouncing pleure and prsing pain was born and I will give you a complete account of the system, and expound the actual teachings  the master-builder of humanit happiness</p>
-                    <p class="hidden-sm">I must explain to you how all this mistaken idea of denouncing pleure and prsing pain was born and I will give you a complete account of the system</p>
-                    <a class="default-btn" href="about.html">buy now</a>
+                    <h2>@Html.Raw(Model.AboutEduHomes.FirstOrDefault(a => a.Key == "Title").Value)</h2>
+                    <p>@Model.AboutEduHomes.FirstOrDefault(a => a.Key == "Description").Value</p>
+                    <a class="default-btn" href="@Model.AboutEduHomes.FirstOrDefault(a=>a.Key == "Link").Value">buy now</a>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="about-img">
-                    <img src="~/img/about/about.png" alt="about">
+                    <img src="~/img/about/@Model.AboutEduHomes.FirstOrDefault(a=>a.Key=="Image").Value" alt="about">
                 </div>
             </div>
         </div>
@@ -149,81 +147,36 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-event mb-35">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event5.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
+            @foreach (Event event1 in Model.Events.Take(3))
+            {
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="single-event mb-35">
+                        <div class="event-img">
+                            <a href="event-details.html">
+                                <img src="~/img/event/@event1.Image" alt="event">
+                                <div class="course-hover">
+                                    <i class="fa fa-link"></i>
+                                </div>
+                            </a>
+                            <div class="event-date">
+                                <h3>@(event1.Date.ToString("dd  MMM")) </h3>
                             </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>20 <span>jun</span></h3>
                         </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">ADVANCE PHP WORKSHOP</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
+                        <div class="event-content text-left">
+                            <h4><a href="event-details.html">ADVANCE PHP WORKSHOP</a></h4>
+                            <ul>
+                                <li><span>time:</span> @event1.StartTime - @event1.EndTime</li>
+                                <li><span>venue</span> @event1.Venue</li>
+                            </ul>
+                            <div class="event-content-right">
+                                <a class="default-btn" asp-controller="event" asp-action="detail">join now</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-event mb-35">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event6.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>18 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">learning english history</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 hidden-sm col-xs-12">
-                <div class="single-event mb-35">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event7.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>16 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">UI &amp; UX DESIGNER MEETUP</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+            }
+
         </div>
     </div>
 </div>
@@ -232,21 +185,26 @@
 <div class="testimonial-area three pt-110 pb-105 text-center">
     <div class="container">
         <div class="row">
+
             <div class="testimonial-owl owl-theme owl-carousel">
-                <div class="col-md-8 col-md-offset-2 col-sm-12">
-                    <div class="single-testimonial">
-                        <div class="testimonial-info">
-                            <div class="testimonial-img">
-                                <img src="~/img/testimonial/testimonial.jpg" alt="testimonial">
-                            </div>
-                            <div class="testimonial-content">
-                                <p>I must explain to you how all this mistaken idea of denoung pleure and praising pain was born and I will give you a coete account of the system, and expound the actual</p>
-                                <h4>David Morgan</h4>
-                                <h5>Student, CSE</h5>
+                @foreach (Testimonial testimonial in Model.Testimonials)
+                {
+                    <div class="col-md-8 col-md-offset-2 col-sm-12">
+                        <div class="single-testimonial">
+                            <div class="testimonial-info">
+                                <div class="testimonial-img">
+                                    <img src="~/img/testimonial/@testimonial.Image" alt="testimonial">
+                                </div>
+                                <div class="testimonial-content">
+                                    <p>@testimonial.Description</p>
+                                    <h4>@testimonial.Author</h4>
+                                    <h5>@testimonial.AuthorPosition</h5>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+
+                }
             </div>
         </div>
     </div>
@@ -264,63 +222,29 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-blog">
-                    <div class="blog-img">
-                        <a href="blog-details.html"><img src="~/img/blog/blog1.jpg" alt="blog"></a>
-                        <div class="blog-hover">
-                            <a href="blog-details.html"><i class="fa fa-link"></i></a>
+            @foreach (Blog item in Model.Blogs.Take(3))
+            {
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="single-blog">
+                        <div class="blog-img">
+                            <a href="blog-details.html"><img src="~/img/blog/@item.Image" alt="blog"></a>
+                            <div class="blog-hover">
+                                <a asp-controller="blog" asp-action="detail"><i class="fa fa-link"></i></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="blog-content">
-                        <div class="blog-top">
-                            <p>By Alex  /  June 20, 2017  /  <i class="fa fa-comments-o"></i> 4</p>
-                        </div>
-                        <div class="blog-bottom">
-                            <h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
-                            <a href="blog-details.html">read more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-blog">
-                    <div class="blog-img">
-                        <a href="blog-details.html"><img src="~/img/blog/blog2.jpg" alt="blog"></a>
-                        <div class="blog-hover">
-                            <a href="blog-details.html"><i class="fa fa-link"></i></a>
-                        </div>
-                    </div>
-                    <div class="blog-content">
-                        <div class="blog-top">
-                            <p>By Alex  /  June 20, 2017  /  <i class="fa fa-comments-o"></i> 4</p>
-                        </div>
-                        <div class="blog-bottom">
-                            <h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
-                            <a href="blog-details.html">read more</a>
+                        <div class="blog-content">
+                            <div class="blog-top">
+                                <p>By @item.Author  /  @item.Date.ToString("MMMM dd, yyyy")  /  <i class="fa fa-comments-o"></i> 4</p>
+                            </div>
+                            <div class="blog-bottom">
+                                <h2><a asp-controller="blog" asp-action="detail">@item.Description.Substring(0,100)</a></h2>
+                                <a asp-controller="blog" asp-action="detail">read more</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 hidden-sm col-xs-12">
-                <div class="single-blog">
-                    <div class="blog-img">
-                        <a href="blog-details.html"><img src="~/img/blog/blog3.jpg" alt="blog"></a>
-                        <div class="blog-hover">
-                            <a href="blog-details.html"><i class="fa fa-link"></i></a>
-                        </div>
-                    </div>
-                    <div class="blog-content">
-                        <div class="blog-top">
-                            <p>By Alex  /  June 20, 2017  /  <i class="fa fa-comments-o"></i> 4</p>
-                        </div>
-                        <div class="blog-bottom">
-                            <h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
-                            <a href="blog-details.html">read more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+            }
         </div>
     </div>
 </div>
