--- a/EduHome/Views/Event/Index.cshtml
+++ b/EduHome/Views/Event/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<Event>
 @{
     ViewData["Title"] = "Index";
 }
@@ -24,231 +24,36 @@
 <div class="event-area three text-center pt-150 pb-150">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-event mb-60">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event5.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
+            @foreach (Event event1 in Model)
+            {
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="single-event mb-35">
+                        <div class="event-img">
+                            <a asp-controller="event" asp-action="detail">
+                                <img src="~/img/event/@event1.Image" alt="event">
+                                <div class="course-hover">
+                                    <i class="fa fa-link"></i>
+                                </div>
+                            </a>
+                            <div class="event-date">
+                                <h3>@(event1.Date.ToString("dd  MMM")) </h3>
                             </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>20 <span>jun</span></h3>
                         </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">ADVANCE PHP WORKSHOP</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
+                        <div class="event-content text-left">
+                            <h4><a asp-controller="event" asp-action="detail">ADVANCE PHP WORKSHOP</a></h4>
+                            <ul>
+                                <li><span>time:</span> @event1.StartTime - @event1.EndTime</li>
+                                <li><span>venue</span> @event1.Venue</li>
+                            </ul>
+                            <div class="event-content-right">
+                                <a class="default-btn" asp-controller="event" asp-action="detail">join now</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-event mb-60">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event6.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>18 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">learning english history</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-event mb-60">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event7.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>16 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">UI &amp; UX DESIGNER MEETUP</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-event mb-60">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event8.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>14 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">ADVANCE WEB DEVELOPMENT</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-event mb-60">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event9.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>12 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">digital marketing analysis</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-event mb-60">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event10.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>10 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">Developer's meetup</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-event">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event11.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>08 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">WORKSHOP ON MICRO BIOLOGY</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 hidden-xs">
-                <div class="single-event">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event12.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>06 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">ADVANCED PHOTOSHOP 2017</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 hidden-sm hidden-xs">
-                <div class="single-event">
-                    <div class="event-img">
-                        <a href="event-details.html">
-                            <img src="~/img/event/event13.jpg" alt="event">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                        <div class="event-date">
-                            <h3>04 <span>jun</span></h3>
-                        </div>
-                    </div>
-                    <div class="event-content text-left">
-                        <h4><a href="event-details.html">NEW TREND IN WEBDESIGN</a></h4>
-                        <ul>
-                            <li><span>time:</span> 9.00 AM - 4.45 PM</li>
-                            <li><span>venue</span> New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            }
+
+
         </div>
     </div>
 </div>
