--- a/EduHome/Views/Home/Index.cshtml
+++ b/EduHome/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                             </a>
                         </div>
                         <div class="course-content">
-                            <h3><a href="course-details.html">@course.Name</a></h3>
+                            <h3><a asp-controller="course" asp-action="detail">@course.Name</a></h3>
                             <p>@course.Description.Substring(0, 50)</p>
                             <a class="default-btn" asp-controller="course" asp-action="detail" asp-route-id="@course.Id">read more</a>
                         </div>
@@ -152,7 +152,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="single-event mb-35">
                         <div class="event-img">
-                            <a href="event-details.html">
+                            <a asp-controller="event" asp-action="detail">
                                 <img src="~/img/event/@event1.Image" alt="event">
                                 <div class="course-hover">
                                     <i class="fa fa-link"></i>
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                         <div class="event-content text-left">
-                            <h4><a href="event-details.html">ADVANCE PHP WORKSHOP</a></h4>
+                            <h4><a asp-controller="event" asp-action="detail">ADVANCE PHP WORKSHOP</a></h4>
                             <ul>
                                 <li><span>time:</span> @event1.StartTime - @event1.EndTime</li>
                                 <li><span>venue</span> @event1.Venue</li>
@@ -227,7 +227,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="single-blog">
                         <div class="blog-img">
-                            <a href="blog-details.html"><img src="~/img/blog/@item.Image" alt="blog"></a>
+                            <a asp-controller="blog" asp-action="detail"><img src="~/img/blog/@item.Image" alt="blog"></a>
                             <div class="blog-hover">
                                 <a asp-controller="blog" asp-action="detail"><i class="fa fa-link"></i></a>
                             </div>
