--- a/EduHome/Views/Event/Index.cshtml
+++ b/EduHome/Views/Event/Index.cshtml
@@ -1,24 +1,11 @@
 ﻿@model IEnumerable<Event>
 @{
     ViewData["Title"] = "Index";
+   
 }
 
 <!-- Banner Area Start -->
-<div class="banner-area-wrapper">
-    <div class="banner-area text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="banner-content-wrapper">
-                        <div class="banner-content">
-                            <h2>event</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@(await Html.PartialAsync("_BannerPartial", "event")))
 <!-- Banner Area End -->
 <!-- Event Start -->
 <div class="event-area three text-center pt-150 pb-150">
@@ -26,31 +13,7 @@
         <div class="row">
             @foreach (Event event1 in Model)
             {
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <div class="single-event mb-35">
-                        <div class="event-img">
-                            <a asp-controller="event" asp-action="detail">
-                                <img src="~/img/event/@event1.Image" alt="event">
-                                <div class="course-hover">
-                                    <i class="fa fa-link"></i>
-                                </div>
-                            </a>
-                            <div class="event-date">
-                                <h3>@(event1.Date.ToString("dd  MMM")) </h3>
-                            </div>
-                        </div>
-                        <div class="event-content text-left">
-                            <h4><a asp-controller="event" asp-action="detail">ADVANCE PHP WORKSHOP</a></h4>
-                            <ul>
-                                <li><span>time:</span> @event1.StartTime - @event1.EndTime</li>
-                                <li><span>venue</span> @event1.Venue</li>
-                            </ul>
-                            <div class="event-content-right">
-                                <a class="default-btn" asp-controller="event" asp-action="detail">join now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                @(await Html.PartialAsync("_EventPartial", event1))
             }
 
 
