--- a/EduHome/Views/About/Index.cshtml
+++ b/EduHome/Views/About/Index.cshtml
@@ -3,42 +3,20 @@
     ViewData["Title"] = "Index";
 }
 
+
 <!-- Banner Area Start -->
-<div class="banner-area-wrapper">
-    <div class="banner-area text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="banner-content-wrapper">
-                        <div class="banner-content">
-                            <h2>about us</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@(await Html.PartialAsync("_BannerPartial", "about us")))
 <!-- Banner Area End -->
 <!-- About Start -->
 <div class="about-area pb-135 pt-130">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-sm-6">
-                <div class="about-content">
-                    <h2>@Html.Raw((Model.AboutEduHomes.FirstOrDefault(a => a.Key == "Title")).Value)</h2>
-                    <p>@Model.AboutEduHomes.FirstOrDefault(a => a.Key == "Description").Value</p>
-                    <a class="default-btn" href="@Model.AboutEduHomes.FirstOrDefault(a=>a.Key == "Link").Value">buy now</a>
-                </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-                <div class="about-img">
-                    <img src="~/img/about/@Model.AboutEduHomes.FirstOrDefault(a=>a.Key=="Image").Value" alt="about">
-                </div>
-            </div>
+@(await Html.PartialAsync("_AboutPartial", Model.AboutEduHomes))
+         
         </div>
     </div>
 </div>
+
 <!-- About End -->
 <!-- Teacher Start -->
 <div class="teacher-area pb-150">
@@ -54,23 +32,7 @@
         <div class="row">
             @foreach (Teacher teacher in Model.Teachers.Take(4))
             {
-                <div class="col-md-3 col-sm-4 col-xs-12">
-                    <div class="single-teacher">
-                        <div class="single-teacher-img">
-                            <a asp-controller="teacher" asp-action="detail"><img src="~/img/teacher/@teacher.Image" alt="teacher"></a>
-                        </div>
-                        <div class="single-teacher-content text-center">
-                            <h2><a asp-controller="teacher" asp-action="detail">@teacher.Name @teacher.Surname</a></h2>
-                            <h4>@teacher.Profession</h4>
-                            <ul>
-                                <li><a href="@teacher.FacebookUrl"><i class="zmdi zmdi-facebook"></i></a></li>
-                                <li><a href="@teacher.PinterestUrl"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                <li><a href="@teacher.VUrl"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                <li><a href="@teacher.TwitterUrl"><i class="zmdi zmdi-twitter"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                @(await Html.PartialAsync("_TeacherPartial", teacher))
 
             }
 
@@ -85,20 +47,7 @@
             <div class="testimonial-owl owl-theme owl-carousel">
                 @foreach (Testimonial testimonial in Model.Testimonials)
                 {
-                    <div class="col-md-8 col-md-offset-2 col-sm-12">
-                        <div class="single-testimonial">
-                            <div class="testimonial-info">
-                                <div class="testimonial-img">
-                                    <img src="~/img/testimonial/@testimonial.Image" alt="testimonial">
-                                </div>
-                                <div class="testimonial-content">
-                                    <p>@testimonial.Description</p>
-                                    <h4>@testimonial.Author</h4>
-                                    <h5>@testimonial.AuthorPosition</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    @(await Html.PartialAsync("_TestimonialPartial", testimonial))
 
                 }
             </div>
@@ -107,41 +56,5 @@
 </div>
 <!-- Testimonial Area End -->
 <!-- Notice Start -->
-<section class="notice-area two three pt-140 pb-100">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-12">
-                <div class="notice-right-wrapper mb-25 pb-25">
-                    <h3>TAKE A VIDEO TOUR</h3>
-                    <div class="notice-video">
-                        <div class="video-icon video-hover">
-                            <a class="video-popup" href="@foreach (NoticeBoard notice1 in Model.NoticeBoards.Take(1))
-                            {
-                                @notice1.VideoLink
-	                         }">
-                                <i class="zmdi zmdi-play"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-sm-6 col-xs-12">
-                <div class="notice-left-wrapper">
-                    <h3>notice board</h3>
-                    <div class="notice-left">
-                        @foreach (NoticeBoard notice in Model.NoticeBoards)
-                        {
-                            <div class="single-notice-left mb-23 pb-20">
-                                <h4>@notice.Date.ToString("dd, MMMM yyyy")</h4>
-                                <p>@notice.Text</p>
-                            </div>
-
-                        }
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+@(await Html.PartialAsync("_NoticePartial", Model.NoticeBoards))
 <!-- Notice End -->
