--- a/EduHome/Views/Blog/Index.cshtml
+++ b/EduHome/Views/Blog/Index.cshtml
@@ -4,21 +4,7 @@
 }
 
 <!-- Banner Area Start -->
-<div class="banner-area-wrapper">
-    <div class="banner-area text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="banner-content-wrapper">
-                        <div class="banner-content">
-                            <h2>blog</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@(await Html.PartialAsync("_BannerPartial", "Blog"))
 <!-- Banner Area End -->
 <!-- Blog Start -->
 <div class="blog-area pt-150 pb-150">
@@ -34,25 +20,7 @@
         <div class="row">
             @foreach (Blog item in Model)
             {
-                <div class="col-md-4 col-sm-6 col-xs-12 mb-125">
-                    <div class="single-blog">
-                        <div class="blog-img">
-                            <a asp-controller="blog" asp-action="detail"><img src="~/img/blog/@item.Image" alt="blog"></a>
-                            <div class="blog-hover">
-                                <a asp-controller="blog" asp-action="detail"><i class="fa fa-link"></i></a>
-                            </div>
-                        </div>
-                        <div class="blog-content">
-                            <div class="blog-top">
-                                <p>By @item.Author  /  @item.Date.ToString("MMMM dd, yyyy")  /  <i class="fa fa-comments-o"></i> 4</p>
-                            </div>
-                            <div class="blog-bottom">
-                                <h2><a asp-controller="blog" asp-action="detail">@item.Description.Substring(0, 100)</a></h2>
-                                <a asp-controller="blog" asp-action="detail">read more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                @(await Html.PartialAsync("_BlogPartial", item))
 
             }
         </div>
