--- a/EduHome/Views/Contact/Index.cshtml
+++ b/EduHome/Views/Contact/Index.cshtml
@@ -4,21 +4,7 @@
 }
 
 <!-- Banner Area Start -->
-<div class="banner-area-wrapper">
-    <div class="banner-area text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="banner-content-wrapper">
-                        <div class="banner-content">
-                            <h2>contact</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@(await Html.PartialAsync("_BannerPartial", "contact")))
 <!-- Banner Area End -->
 <!-- Contact Start -->
 <div class="map-area">
@@ -68,27 +54,7 @@
             <div class="col-md-7 col-sm-7 col-xs-12">
                 <div class="reply-area">
                     <h3>LEAVE A message</h3>
-                    <p>I must explain to you how all this a mistaken idea of ncing great explorer of the rut the is lder of human happinescias unde omnis iste natus error sit volptatem </p>
-                    <form id="contact-form" action="http://demo.devitems.com/eduhome/mail.php" method="post">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <p>Name</p>
-                                <input type="text" name="name" id="name">
-                            </div>
-                            <div class="col-md-12">
-                                <p>Email</p>
-                                <input type="text" name="email" id="email">
-                            </div>
-                            <div class="col-md-12">
-                                <p>Subject</p>
-                                <input type="text" name="subject" id="subject">
-                                <p>Massage</p>
-                                <textarea name="message" id="message" cols="15" rows="10"></textarea>
-                            </div>
-                        </div>
-                        <a class="reply-btn" href="#" data-text="send"><span>send message</span></a>
-                        <p class="form-messege"></p>
-                    </form>
+                    @(await Html.PartialAsync("_LeaveReplyPartial"))
                 </div>
             </div>
         </div>
