--- a/EduHome/Views/Teacher/Index.cshtml
+++ b/EduHome/Views/Teacher/Index.cshtml
@@ -4,21 +4,7 @@
 }
 
 <!-- Banner Area Start -->
-<div class="banner-area-wrapper">
-    <div class="banner-area text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="banner-content-wrapper">
-                        <div class="banner-content">
-                            <h2>our teachers</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@(await Html.PartialAsync("_BannerPartial", "our teachers")))
 <!-- Banner Area End -->
 <!-- Teacher Start -->
 <div class="teacher-area pb-150">
@@ -26,24 +12,7 @@
         <div class="row mt-100">
             @foreach (Teacher teacher in Model)
             {
-                <div class="col-md-3 col-sm-4 col-xs-12 mt-40">
-                    <div class="single-teacher">
-                        <div class="single-teacher-img">
-                            <a asp-controller="teacher" asp-action="detail"><img src="~/img/teacher/@teacher.Image" alt="teacher"></a>
-                        </div>
-                        <div class="single-teacher-content text-center">
-                            <h2><a asp-controller="teacher" asp-action="detail">@teacher.Name @teacher.Surname</a></h2>
-                            <h4>@teacher.Profession</h4>
-                            <ul>
-                                <li><a href="@teacher.FacebookUrl"><i class="zmdi zmdi-facebook"></i></a></li>
-                                <li><a href="@teacher.PinterestUrl"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                <li><a href="@teacher.VUrl"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                <li><a href="@teacher.TwitterUrl"><i class="zmdi zmdi-twitter"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
+                @(await Html.PartialAsync("_TeacherPartial", teacher))
             }
 
         </div>
