--- a/EduHome/Views/Shared/_CoursePartial.cshtml
+++ b/EduHome/Views/Shared/_CoursePartial.cshtml
@@ -1,9 +1,9 @@
-﻿@model Course
+﻿@model CourseVM
 
 <div class="col-md-4 col-sm-6 col-xs-12">
     <div class="single-course mb-70">
         <div class="course-img">
-            <a asp-controller="course" asp-action="detail">
+            <a asp-controller="course" asp-action="detail" asp-route-id="@Model.Id">
                 <img src="~/img/course/@Model.Image" alt="course">
                 <div class="course-hover">
                     <i class="fa fa-link"></i>
@@ -11,9 +11,9 @@
             </a>
         </div>
         <div class="course-content">
-            <h3><a asp-controller="course" asp-action="detail">@Model.Name</a></h3>
+            <h3><a asp-controller="course" asp-action="detail" asp-route-id="@Model.Id">@Model.Name</a></h3>
             <p>@Model.Description.Substring(0, 80)</p>
-            <a class="default-btn" asp-controller="course" asp-action="detail">read more</a>
+            <a class="default-btn" asp-controller="course" asp-action="detail" asp-route-id="@Model.Id">read more</a>
         </div>
     </div>
 </div>
