--- a/EduHome/Views/Shared/_TeacherPartial.cshtml
+++ b/EduHome/Views/Shared/_TeacherPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Teacher
+﻿@model TeacherVM
 <div class="col-md-3 col-sm-4 col-xs-12 mt-40">
     <div class="single-teacher">
         <div class="single-teacher-img">
