--- a/EduHome/Views/_ViewImports.cshtml
+++ b/EduHome/Views/_ViewImports.cshtml
@@ -4,3 +4,5 @@
 @using EduHome.Interfaces
 @using EduHome.ViewModels.Home
 @using EduHome.ViewModels.About
+@using EduHome.ViewModels.CourseV
+@using EduHome.ViewModels.TeacherV
