--- a/EduHome/Views/Course/Index.cshtml
+++ b/EduHome/Views/Course/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Course>
+﻿@model IEnumerable<CourseVM>
 @{
     ViewData["Title"] = "Index";
 }
@@ -16,14 +16,16 @@
                 </div>
                 <div class="course-form">
                     <form id="search" action="#">
-                        <input type="search" placeholder="Search..." name="search" />
-                        <button type="submit">search</button>
+                        <input id="InputCourse" type="search" placeholder="Search..." name="search" />
+                        <button id="BtnCourse" type="submit">search</button>
                     </form>
+                    <ul id="searchResultCourse" style="border: 1px solid; background-color:white; text-decoration:none; width: 100%; height: auto; position: absolute; z-index: 8;">
+                    </ul>
                 </div>
             </div>
         </div>
         <div class="row">
-            @foreach (Course course in Model)
+            @foreach (CourseVM course in Model)
             {
                 @(await Html.PartialAsync("_CoursePartial", course))
             }
