--- a/EduHome/Views/Home/Index.cshtml
+++ b/EduHome/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="row">
-            @foreach (Course course in Model.Courses.Take(3))
+            @foreach (CourseVM course in Model.CourseVMs.Take(3))
             {
 
                 @(await Html.PartialAsync("_CoursePartial", course))
