--- a/EduHome/Views/Shared/_Layout.cshtml
+++ b/EduHome/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@inject ILayoutService layoutservices
-@{ 
-    IDictionary<string,string> settings = await layoutservices.GetSettings();
+@{
+    IDictionary<string, string> settings = await layoutservices.GetSettings();
 }
 <!doctype html>
 <html class="no-js" lang="en">
@@ -41,7 +41,7 @@
                 <div class="row">
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <div class="header-top-left">
-                            <p>HAVE ANY QUESTION ?  @settings.FirstOrDefault(s=>s.Key== "CallCenter").Value</p>
+                            <p>HAVE ANY QUESTION ?  @settings.FirstOrDefault(s => s.Key == "CallCenter").Value</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12">
@@ -75,19 +75,19 @@
                                         <li><a asp-controller="about">About</a></li>
                                         <li>
                                             <a asp-controller="course">courses</a>
-                                           
+
                                         </li>
                                         <li>
                                             <a asp-controller="event">event</a>
-                                         
+
                                         </li>
                                         <li>
                                             <a asp-controller="teacher">teacher</a>
-                                          
+
                                         </li>
                                         <li>
                                             <a asp-controller="blog" asp-action="index">blog</a>
-                                           
+
                                         </li>
                                         <li><a asp-controller="contact">Contact</a></li>
                                         <li><a href="#">Buy Now</a>
@@ -96,7 +96,7 @@
                             </div>
                             <!--Search Form Start-->
                             <div class="search-btn">
-                                <ul data-toggle="dropdown" class="header-search search-toggle">
+                                <ul id="headerSearch" data-toggle="dropdown" class="header-search search-toggle">
                                     <li class="search-menu">
                                         <i class="fa fa-search"></i>
                                     </li>
@@ -104,11 +104,15 @@
                                 <div class="search">
                                     <div class="search-form">
                                         <form id="search-form" action="#">
-                                            <input type="search" placeholder="Search here..." name="search" />
-                                            <button type="submit">
+                                            <input class="InputForSearch" type="search" placeholder="Search here..." name="search" />
+                                            <button id="searchBtn" type="submit">
                                                 <span><i class="fa fa-search"></i></span>
                                             </button>
                                         </form>
+
+                                        <ul id="searchResult" style="border: 1px solid; background-color:white; text-decoration:none; width: 100%; height: auto; position: absolute; z-index: 8;">
+                                           
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -166,7 +170,7 @@
                             <div class="footer-logo pb-25">
                                 <a asp-controller="home"><img src="~/img/logo/@settings.FirstOrDefault(s=>s.Key=="Logo").Value" alt="eduhome"></a>
                             </div>
-                            <p>@settings.FirstOrDefault(s=>s.Key== "Description").Value</p>
+                            <p>@settings.FirstOrDefault(s => s.Key == "Description").Value</p>
                             <div class="footer-social">
                                 <ul>
                                     <li><a href="#"><i class="zmdi zmdi-facebook"></i></a></li>
@@ -204,9 +208,9 @@
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="single-widget">
                             <h3>get in touch</h3>
-                            <p>@Html.Raw(settings.FirstOrDefault(s=>s.Key=="Address").Value)</p>
-                            <p>@settings.FirstOrDefault(s=>s.Key=="CallCenter").Value</p>
-                            <p>@settings.FirstOrDefault(s=>s.Key=="Email").Value<br>www.eduhome.com</p>
+                            <p>@Html.Raw(settings.FirstOrDefault(s => s.Key == "Address").Value)</p>
+                            <p>@settings.FirstOrDefault(s => s.Key == "CallCenter").Value</p>
+                            <p>@settings.FirstOrDefault(s => s.Key == "Email").Value<br>www.eduhome.com</p>
                         </div>
                     </div>
                 </div>
@@ -234,6 +238,8 @@
     <script src="~/js/jquery.nicescroll.min.js"></script>
     <script src="~/js/plugins.js"></script>
     <script src="~/js/main.js"></script>
+    <script src="~/js/custom.js"></script>
+
 </body>
 
 <!-- Mirrored from demo.devitems.com/eduhome/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 21 Jun 2020 19:41:25 GMT -->
